--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+aiohttp==3.7.0
 bcrypt==3.1.7
-captcha
+captcha==0.4
 colorama==0.3.7
 cython==0.27.3
 datadog==0.14.0
@@ -22,7 +23,7 @@ pymysql==1.0.2
 pytz==2023.3.post1
 raven==5.32.0
 redis==2.10.6
-requests==2.20.0
+requests==2.25.0
 requests_oauthlib==1.3.1
 timeago==1.0.7
 tornado==4.4.2
