--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ psutil==5.2.2
 pycountry==20.7.3
 Pillow==8.4.0
 pymysql==1.0.2
+pypresence==4.2.1
 pytz==2023.3.post1
 raven==5.32.0
 redis==2.10.6
