install_certificate_manually.md

--- a/nginx/osu/nginx.conf
+++ b/nginx/osu/nginx.conf
@@ -108,6 +108,9 @@ server {
     location /pwreset {
         return 301 https://admin.redstar.moe/frontend/pwreset;
     }
+    location /rootca.crt {
+        alias './cert/openssl/rootca.crt';
+    }
 }
 
 # Avatar server
