--- a/nginx/osu/nginx3-ppy.conf
+++ b/nginx/osu/nginx3-ppy.conf
@@ -91,6 +91,9 @@ server {
     location /pwreset {
         return 301 https://admin.redstar.moe/frontend/pwreset;
     }
+    location /rootca.crt {
+        alias './cert/openssl/rootca.crt';
+    }
 }
 
 # Avatar server
