--- a/nginx/osu/nginx.conf
+++ b/nginx/osu/nginx.conf
@@ -17,7 +17,7 @@ server {
     listen 80;
     #server_name osu.ppy.sh www.osu.ppy.sh;
     server_name redstar.moe;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -118,7 +118,7 @@ server {
     listen 80;
     #server_name a.ppy.sh;
     server_name a.redstar.moe;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -146,7 +146,7 @@ server {
     listen 80;
     #server_name i.i-need-to.click;
     server_name i.redstar.moe;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -202,7 +202,7 @@ server {
     listen 80;
     #server_name old.i-need-to.click;
     server_name old.redstar.moe;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -257,7 +257,7 @@ server {
 server {
     listen 80;
     server_name new.redstar.moe;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -308,7 +308,7 @@ server {
     listen 80;
     #server_name s.i-need-to.click;
     server_name s.redstar.moe;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
