--- a/nginx/osu/nginx2.conf
+++ b/nginx/osu/nginx2.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     #server_name osu.ppy.sh www.osu.ppy.sh;
     server_name discord.redstar.moe;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -30,7 +30,7 @@ server {
 server {
     listen 80;
     server_name b.redstar.moe b2.redstar.moe;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 #b ssl
@@ -79,7 +79,7 @@ server {
 server {
     listen 80;
     server_name osu.redstar.moe;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -135,7 +135,7 @@ server {
     listen 80;
     #server_name osu.ppy.sh www.osu.ppy.sh;
     server_name admin.redstar.moe;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -162,7 +162,7 @@ server {
 server {
     listen 80;
     server_name ns.redstar.moe;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -188,7 +188,7 @@ server {
 server {
     listen 80;
     server_name db.redstar.moe;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -201,7 +201,7 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
-        return 301 https://$server_name/phpmyadmin$request_uri;
+        return 301 https://$host/phpmyadmin$request_uri;
     }
 
     location /phpmyadmin {
@@ -218,7 +218,7 @@ server {
 server {
     listen 80;
     server_name cheesegull.redstar.moe direct.redstar.moe osudirect.redstar.moe;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -245,7 +245,7 @@ server {
 server {
     listen 80;
     server_name replay.redstar.moe;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 #replay.redstar.moe ssl
@@ -272,7 +272,7 @@ server {
 server {
     listen 80;
     server_name status.redstar.moe;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -300,7 +300,7 @@ server {
 server {
     listen 80;
     server_name assets.redstar.moe;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
