--- a/nginx/osu/nginx3-ppy.conf
+++ b/nginx/osu/nginx3-ppy.conf
@@ -2,7 +2,7 @@
 server {
     listen 80;
     server_name osu.ppy.sh www.osu.ppy.sh;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -100,7 +100,7 @@ server {
 server {
     listen 80;
     server_name a.ppy.sh;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -126,7 +126,7 @@ server {
 server {
     listen 80;
     server_name i.ppy.sh;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -179,7 +179,7 @@ server {
 server {
     listen 80;
     server_name old.ppy.sh;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -233,7 +233,7 @@ server {
 server {
     listen 80;
     server_name new.ppy.sh;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -283,7 +283,7 @@ server {
 server {
     listen 80;
     server_name s.ppy.sh;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -320,7 +320,7 @@ server {
 server {
     listen 80;
     server_name discord.ppy.sh;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -347,7 +347,7 @@ server {
 server {
     listen 80;
     server_name b.ppy.sh b2.ppy.sh;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 #b ssl
@@ -397,7 +397,7 @@ server {
     listen 80;
     #server_name osu.ppy.sh www.osu.ppy.sh;
     server_name admin.ppy.sh;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -424,7 +424,7 @@ server {
 server {
     listen 80;
     server_name db.ppy.sh;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -437,7 +437,7 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
-        return 301 https://$server_name/phpmyadmin$request_uri;
+        return 301 https://$host/phpmyadmin$request_uri;
     }
 
     location /phpmyadmin {
@@ -454,7 +454,7 @@ server {
 server {
     listen 80;
     server_name cheesegull.ppy.sh direct.ppy.sh osudirect.ppy.sh;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -481,7 +481,7 @@ server {
 server {
     listen 80;
     server_name replay.ppy.sh;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -507,7 +507,7 @@ server {
 server {
     listen 80;
     server_name status.ppy.sh;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -535,7 +535,7 @@ server {
 server {
     listen 80;
     server_name assets.ppy.sh;
-    return 308 https://$server_name$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
