--- a/nginx/osu/nginx.conf
+++ b/nginx/osu/nginx.conf
@@ -12,18 +12,18 @@ upstream bancho {
 
 
 
-# Hanayo frontend
 server {
     listen 80;
     #server_name osu.ppy.sh www.osu.ppy.sh;
-    server_name redstar.moe;
+    server_name redstar.moe *.redstar.moe;
     return 308 https://$host$request_uri;
 }
 
+# Hanayo frontend
 server {
     listen 443 ssl;
     #server_name osu.ppy.sh www.osu.ppy.sh;
-    server_name redstar.moe;
+    server_name redstar.moe osu.redstar.moe;
 
     #ssl on;
     ssl_certificate './cert/cert.crt';
@@ -33,12 +33,6 @@ server {
 
     location /d/  {
         return 301 https://b.redstar.moe$request_uri;
-        #proxy_set_header X-Real-IP $real_IP;
-        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #proxy_set_header X-Forwarded-Proto https;
-        #proxy_set_header Host $http_host;
-        #proxy_redirect off;
-        #proxy_pass http://localhost:6200$request_uri;
     }
 
     location / {
@@ -60,26 +54,7 @@ server {
     }
 
     #lets
-    #location ~ ^/(web|ss)/ {
-    #    proxy_set_header X-Real-IP $real_IP;
-    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #    proxy_set_header X-Forwarded-Proto https;
-    #    proxy_set_header Host $http_host;
-    #    proxy_redirect off;
-    #    proxy_pass http://lets;
-    #}
-
-    location /users {
-        proxy_set_header X-Real-IP $real_IP;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-        proxy_pass http://lets;
-    }
-
-    #lets
-    location ~ ^/(web|ss|letsapi)/ {
+    location ~ ^/(web|ss|letsapi|users)/ {
         proxy_set_header X-Real-IP $real_IP;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
@@ -108,19 +83,12 @@ server {
     location /pwreset {
         return 301 https://admin.redstar.moe/frontend/pwreset;
     }
-    location /rootca.crt {
-        alias './cert/openssl/rootca.crt';
+    location /cert.crt {
+        alias './cert/openssl/cert.crt';
     }
 }
 
 # Avatar server
-server {
-    listen 80;
-    #server_name a.ppy.sh;
-    server_name a.redstar.moe;
-    return 308 https://$host$request_uri;
-}
-
 server {
     listen 443 ssl; 
     #server_name a.ppy.sh;
@@ -142,13 +110,6 @@ server {
 }
 
 # IMAGE SERVER
-server {
-    listen 80;
-    #server_name i.i-need-to.click;
-    server_name i.redstar.moe;
-    return 301 https://$host$request_uri;
-}
-
 server {
     listen 443 ssl;
     #server_name i.i-need-to.click;
@@ -178,7 +139,6 @@ server {
 # Bancho server
 server {
     listen 443 ssl;
-    listen 80;
     #server_name c.ppy.sh c1.ppy.sh c2.ppy.sh c3.ppy.sh c4.ppy.sh c5.ppy.sh c6.ppy.sh c7.ppy.sh c8.ppy.sh c9.ppy.sh ce.ppy.sh;
     server_name c.redstar.moe c1.redstar.moe c2.redstar.moe c3.redstar.moe c4.redstar.moe c5.redstar.moe c6.redstar.moe ce.redstar.moe;
 
@@ -198,13 +158,6 @@ server {
 }
 
 # Old frontend
-server {
-    listen 80;
-    #server_name old.i-need-to.click;
-    server_name old.redstar.moe;
-    return 308 https://$host$request_uri;
-}
-
 server {
     listen 443 ssl;
     #server_name old.i-need-to.click;
@@ -255,12 +208,6 @@ server {
 
 # new frontend
 server {
-    listen 80;
-    server_name new.redstar.moe;
-    return 308 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
     server_name new.redstar.moe;
 
@@ -305,13 +252,6 @@ server {
 
 # S?
 server {
-    listen 80;
-    #server_name s.i-need-to.click;
-    server_name s.redstar.moe;
-    return 301 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
     #server_name s.i-need-to.click;
     server_name s.redstar.moe;
@@ -337,5 +277,188 @@ server {
         proxy_set_header Host $http_host;
         proxy_redirect off;
         proxy_pass http://localhost:6060;    # default port is 6060
+    }
+}
+
+#discord.redstar.moe
+server {
+    listen 443 ssl;
+    server_name discord.redstar.moe;
+
+    #ssl on;
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_prefer_server_ciphers on;
+
+    location / {
+        proxy_set_header X-Real-IP $real_IP;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://localhost:2252;
+    }
+}
+
+#b
+server {
+    listen 443 ssl;
+    server_name b.redstar.moe b2.redstar.moe;
+
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_prefer_server_ciphers on;
+
+    location / {
+        proxy_set_header X-Real-IP $real_IP;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://localhost:6200;
+    }
+}
+
+#irc.redstar.moe (Web)
+server {
+    listen 443 ssl;
+    server_name irc.redstar.moe;
+
+    #ssl on;
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_prefer_server_ciphers on;
+    return 301 https://redstar.moe/irc;
+}
+
+#admin.redstar.moe (Web)
+server {
+    listen 443 ssl;
+    server_name admin.redstar.moe;
+
+    #ssl on;
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_prefer_server_ciphers on;
+
+    location / {
+        proxy_set_header X-Real-IP $real_IP;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://localhost:1337;
+    }
+}
+
+#db.redstar.moe
+server {
+    listen 443 ssl;
+    server_name db.redstar.moe;
+
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_prefer_server_ciphers on;
+
+    location / {
+        return 301 https://$host/phpmyadmin$request_uri;
+    }
+
+    location /phpmyadmin {
+        proxy_set_header X-Real-IP $real_IP;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://localhost:81/$request_uri;
+    }
+}
+
+#cheesegull
+server {
+    listen 443 ssl;
+    server_name cheesegull.redstar.moe direct.redstar.moe osudirect.redstar.moe;
+
+    #ssl on;
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_prefer_server_ciphers on;
+
+    location / {
+        proxy_set_header X-Real-IP $real_IP;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://localhost:6201;
+    }
+}
+
+#replay.redstar.moe
+server {
+    listen 443 ssl; 
+    server_name replay.redstar.moe;
+
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_prefer_server_ciphers on;
+
+    location / {
+        proxy_set_header X-Real-IP $real_IP;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://localhost:81/replay.redstar.moe/;
+    }
+}
+
+#status.redstar.moe
+server {
+    listen 443 ssl;
+    server_name status.redstar.moe;
+
+    #ssl on;
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_prefer_server_ciphers on;
+
+    location / {
+        proxy_set_header X-Real-IP $real_IP;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        #proxy_pass http://localhost:1337/status;
+        return 308 https://admin.redstar.moe/status;
+    }
+}
+
+#assets.redstar.moe
+server {
+    listen 443 ssl;
+    server_name assets.redstar.moe;
+    
+    #ssl on;
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_prefer_server_ciphers on;
+
+    location /menu-content.json {
+        proxy_set_header X-Real-IP $real_IP;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://bancho;
     }
 }
