--- a/nginx/osu/nginx2-ppy.conf
+++ b/nginx/osu/nginx2-ppy.conf
@@ -1,28 +1,22 @@
-# Hanayo frontend
 server {
     listen 80;
-    server_name osu.ppy.sh www.osu.ppy.sh;
+    server_name osu.ppy.sh www.osu.ppy.sh *.ppy.sh;
     return 308 https://$host$request_uri;
 }
 
+# Hanayo frontend
 server {
     listen 443 ssl;
     server_name osu.ppy.sh www.osu.ppy.sh;
 
     #ssl on;
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
     location /d/  {
-        return 301 https://b.redstar.moe$request_uri;
-        #proxy_set_header X-Real-IP $real_IP;
-        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #proxy_set_header X-Forwarded-Proto https;
-        #proxy_set_header Host $http_host;
-        #proxy_redirect off;
-        #proxy_pass http://localhost:6200$request_uri;
+        return 301 https://b.ppy.sh$request_uri;
     }
 
     location / {
@@ -44,25 +38,7 @@ server {
     }
 
     #lets
-    #location ~ ^/(web|ss)/ {
-    #    proxy_set_header X-Real-IP $real_IP;
-    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #    proxy_set_header X-Forwarded-Proto https;
-    #    proxy_set_header Host $http_host;
-    #    proxy_redirect off;
-    #    proxy_pass http://lets;
-    #}
-    location /users {
-        proxy_set_header X-Real-IP $real_IP;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-        proxy_pass http://lets;
-    }
-
-    #lets
-    location ~ ^/(web|ss|letsapi)/ {
+    location ~ ^/(web|ss|letsapi|users)/ {
         proxy_set_header X-Real-IP $real_IP;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
@@ -73,42 +49,36 @@ server {
 
     #ingame change avatar
     location /home/account/edit {
-        return 301 https://redstar.moe/settings/avatar;
+        return 301 https://ppy.sh/settings/avatar;
     }
 
     #redirect
     location ~ ^/beatmaps/(-?\d+)$ {
         set $original_url $1;
-        return 301 https://redstar.moe/b/$original_url;
+        return 301 https://ppy.sh/b/$original_url;
     }
     location ~ ^/b/(-?\d+)$ {
         set $original_url $1;
-        return 301 https://new.redstar.moe/b/$original_url;
+        return 301 https://new.ppy.sh/b/$original_url;
     }
     location /leaderboard {
-        return 301 https://new.redstar.moe$request_uri;
+        return 301 https://new.ppy.sh$request_uri;
     }
     location /pwreset {
-        return 301 https://admin.redstar.moe/frontend/pwreset;
+        return 301 https://admin.ppy.sh/frontend/pwreset;
     }
-    location /rootca.crt {
-        alias './cert/openssl/rootca.crt';
+    location /cert.crt {
+        alias './cert/openssl/cert.crt';
     }
 }
 
 # Avatar server
 server {
-    listen 80;
-    server_name a.ppy.sh;
-    return 308 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl; 
     server_name a.ppy.sh;
 
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -124,18 +94,12 @@ server {
 
 # IMAGE SERVER
 server {
-    listen 80;
-    server_name i.ppy.sh;
-    return 301 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
     server_name i.ppy.sh;
 
     #Certificate pathes
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -157,11 +121,10 @@ server {
 # Bancho server
 server {
     listen 443 ssl;
-    listen 80;
     server_name c.ppy.sh c1.ppy.sh c2.ppy.sh c3.ppy.sh c4.ppy.sh c5.ppy.sh c6.ppy.sh c7.ppy.sh c8.ppy.sh c9.ppy.sh ce.ppy.sh;
 
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -177,12 +140,6 @@ server {
 
 # Old frontend
 server {
-    listen 80;
-    server_name old.ppy.sh;
-    return 308 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
     server_name old.ppy.sh;
 
@@ -190,8 +147,8 @@ server {
     index index.php index.html;
 
     #Certificate pathes
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -231,17 +188,11 @@ server {
 
 # new frontend
 server {
-    listen 80;
-    server_name new.ppy.sh;
-    return 308 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
     server_name new.ppy.sh;
 
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -275,24 +226,18 @@ server {
 
     #redirect
     location /u {
-        return 301 https://redstar.moe$request_uri;
+        return 301 https://ppy.sh$request_uri;
     }
 }
 
 # S?
 server {
-    listen 80;
-    server_name s.ppy.sh;
-    return 301 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
     server_name s.ppy.sh;
 
     #Certificate pathes
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -314,22 +259,14 @@ server {
     }
 }
 
-
-
 #discord.ppy.sh
-server {
-    listen 80;
-    server_name discord.ppy.sh;
-    return 301 https://$host$request_uri;
-}
-
 server {
     listen 443 ssl;
     server_name discord.ppy.sh;
 
     #ssl on;
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -345,18 +282,11 @@ server {
 
 #b
 server {
-    listen 80;
-    server_name b.ppy.sh b2.ppy.sh;
-    return 301 https://$host$request_uri;
-}
-
-#b ssl
-server {
     listen 443 ssl;
     server_name b.ppy.sh b2.ppy.sh;
 
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -370,43 +300,27 @@ server {
     }
 }
 
-#irc.redstar (Web)
-server {
-    listen 80;
-    server_name irc.ppy.sh;
-    return 301 https://redstar.moe/irc;
-}
-
-#irc.redstar SSL (Web)
+#irc.ppy.sh (Web)
 server {
     listen 443 ssl;
     server_name irc.ppy.sh;
 
     #ssl on;
-    #ssl_certificate B:/ripple/nginx-1.16.1/osu/cert.pem;
-    #ssl_certificate_key B:/ripple/nginx-1.16.1/osu/key.pem;
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
-    return 301 https://redstar.moe/irc;
+    return 301 https://ppy.sh/irc;
 }
 
 #admin.ppy.sh (Web)
 server {
-    listen 80;
-    #server_name osu.ppy.sh www.osu.ppy.sh;
-    server_name admin.ppy.sh;
-    return 308 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
     server_name admin.ppy.sh;
 
     #ssl on;
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -422,17 +336,11 @@ server {
 
 #db.ppy.sh
 server {
-    listen 80;
+    listen 443 ssl;
     server_name db.ppy.sh;
-    return 301 https://$host$request_uri;
-}
 
-server {
-    listen 443 ssl; 
-    server_name db.redsppy.sh.moe;
-
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -452,18 +360,12 @@ server {
 
 #cheesegull
 server {
-    listen 80;
-    server_name cheesegull.ppy.sh direct.ppy.sh osudirect.ppy.sh;
-    return 301 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
     server_name cheesegull.ppy.sh direct.ppy.sh osudirect.ppy.sh;
 
     #ssl on;
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -479,17 +381,11 @@ server {
 
 #replay.ppy.sh
 server {
-    listen 80;
-    server_name replay.ppy.sh;
-    return 308 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl; 
     server_name replay.ppy.sh;
 
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -499,24 +395,18 @@ server {
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header Host $http_host;
         proxy_redirect off;
-        proxy_pass http://localhost:81/replay.redstar.moe/;
+        proxy_pass http://localhost:81/replay.ppy.sh/;
     }
 }
 
 #status.ppy.sh
 server {
-    listen 80;
-    server_name status.ppy.sh;
-    return 301 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
     server_name status.ppy.sh;
 
     #ssl on;
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -527,24 +417,18 @@ server {
         proxy_set_header Host $http_host;
         proxy_redirect off;
         #proxy_pass http://localhost:1337/status;
-        return 308 https://admin.redstar.moe/status;
+        return 308 https://admin.ppy.sh/status;
     }
 }
 
 #assets.ppy.sh
 server {
-    listen 80;
-    server_name assets.ppy.sh;
-    return 308 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
     server_name assets.ppy.sh;
-
+    
     #ssl on;
-    ssl_certificate './cert/openssl/cert.crt';
-    ssl_certificate_key './cert/openssl/cert.key';
+    ssl_certificate './cert/cert.crt';
+    ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
