--- a/nginx/osu/nginx2-ppy.conf
+++ b/nginx/osu/nginx2-ppy.conf
@@ -10,8 +10,8 @@ server {
     server_name osu.ppy.sh www.osu.ppy.sh;
 
     #ssl on;
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -77,8 +77,8 @@ server {
     listen 443 ssl; 
     server_name a.ppy.sh;
 
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -98,8 +98,8 @@ server {
     server_name i.ppy.sh;
 
     #Certificate pathes
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -123,8 +123,8 @@ server {
     listen 443 ssl;
     server_name c.ppy.sh c1.ppy.sh c2.ppy.sh c3.ppy.sh c4.ppy.sh c5.ppy.sh c6.ppy.sh c7.ppy.sh c8.ppy.sh c9.ppy.sh ce.ppy.sh;
 
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -147,8 +147,8 @@ server {
     index index.php index.html;
 
     #Certificate pathes
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -191,8 +191,8 @@ server {
     listen 443 ssl;
     server_name new.ppy.sh;
 
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -236,8 +236,8 @@ server {
     server_name s.ppy.sh;
 
     #Certificate pathes
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -265,8 +265,8 @@ server {
     server_name discord.ppy.sh;
 
     #ssl on;
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -285,8 +285,8 @@ server {
     listen 443 ssl;
     server_name b.ppy.sh b2.ppy.sh;
 
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -306,8 +306,8 @@ server {
     server_name irc.ppy.sh;
 
     #ssl on;
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
     return 301 https://ppy.sh/irc;
@@ -319,8 +319,8 @@ server {
     server_name admin.ppy.sh;
 
     #ssl on;
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -339,8 +339,8 @@ server {
     listen 443 ssl;
     server_name db.ppy.sh;
 
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -364,8 +364,8 @@ server {
     server_name cheesegull.ppy.sh direct.ppy.sh osudirect.ppy.sh;
 
     #ssl on;
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -384,8 +384,8 @@ server {
     listen 443 ssl; 
     server_name replay.ppy.sh;
 
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -405,8 +405,8 @@ server {
     server_name status.ppy.sh;
 
     #ssl on;
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
@@ -427,8 +427,8 @@ server {
     server_name assets.ppy.sh;
     
     #ssl on;
-    ssl_certificate './cert/cert.crt';
-    ssl_certificate_key './cert/cert.key';
+    ssl_certificate './cert/openssl/cert.crt';
+    ssl_certificate_key './cert/openssl/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
 
