--- a/nginx/osu/nginx.conf
+++ b/nginx/osu/nginx.conf
@@ -23,7 +23,7 @@ server {
 server {
     listen 443 ssl;
     #server_name osu.ppy.sh www.osu.ppy.sh;
-    server_name redstar.moe osu.redstar.moe;
+    server_name redstar.moe;
 
     #ssl on;
     ssl_certificate './cert/cert.crt';
@@ -86,6 +86,12 @@ server {
     location /cert.crt {
         alias './cert/openssl/cert.crt';
     }
+}
+
+server {
+    listen 443 ssl;
+    server_name osu.redstar.moe;
+    return 308 https://redstar.moe$request_uri;
 }
 
 # Avatar server
