--- a/nginx/osu/nginx3-akatsuki.gg.conf
+++ b/nginx/osu/nginx3-akatsuki.gg.conf
@@ -9,7 +9,7 @@ server {
 server {
     listen 443 ssl;
     #server_name osu.ppy.sh www.osu.ppy.sh;
-    server_name akatsuki.gg osu.akatsuki.gg;
+    server_name akatsuki.gg;
 
     #ssl on;
     ssl_certificate './cert/cert.crt';
@@ -72,6 +72,12 @@ server {
     location /cert.crt {
         alias './cert/openssl/cert.crt';
     }
+}
+
+server {
+    listen 443 ssl;
+    server_name osu.akatsuki.gg;
+    return 308 https://akatsuki.gg$request_uri;
 }
 
 # Avatar server
