--- a/nginx/osu/nginx.conf
+++ b/nginx/osu/nginx.conf
@@ -23,7 +23,7 @@ server {
 server {
     listen 443 ssl;
     #server_name osu.ppy.sh www.osu.ppy.sh;
-    server_name redstar.moe;
+    server_name redstar.moe osu.redstar.moe;
 
     #ssl on;
     ssl_certificate './cert/cert.crt';
@@ -36,6 +36,10 @@ server {
     }
 
     location / {
+        # host가 osu.로 시작하면 308 리다이렉트
+        if ($host ~* ^osu\.) {
+            return 308 https://redstar.moe$request_uri;
+        }
         proxy_set_header X-Real-IP $real_IP;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
@@ -86,12 +90,6 @@ server {
     location /cert.crt {
         alias './cert/openssl/cert.crt';
     }
-}
-
-server {
-    listen 443 ssl;
-    server_name osu.redstar.moe;
-    return 308 https://redstar.moe$request_uri;
 }
 
 # Avatar server
