--- a/nginx/osu/nginx3-akatsuki.gg.conf
+++ b/nginx/osu/nginx3-akatsuki.gg.conf
@@ -9,7 +9,7 @@ server {
 server {
     listen 443 ssl;
     #server_name osu.ppy.sh www.osu.ppy.sh;
-    server_name akatsuki.gg;
+    server_name akatsuki.gg osu.akatsuki.gg;
 
     #ssl on;
     ssl_certificate './cert/cert.crt';
@@ -22,6 +22,10 @@ server {
     }
 
     location / {
+        # host가 osu.로 시작하면 308 리다이렉트
+        if ($host ~* ^osu\.) {
+            return 308 https://akatsuki.gg$request_uri;
+        }
         proxy_set_header X-Real-IP $real_IP;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
@@ -72,12 +76,6 @@ server {
     location /cert.crt {
         alias './cert/openssl/cert.crt';
     }
-}
-
-server {
-    listen 443 ssl;
-    server_name osu.akatsuki.gg;
-    return 308 https://akatsuki.gg$request_uri;
 }
 
 # Avatar server
