--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ openpyxl==3.0.10
 osrparse==3.0.0
 progressbar2==3.38.0
 psutil==5.2.2
+py3rijndael===0.3.3
 pycountry==20.7.3
 Pillow==8.4.0
 pymysql==1.0.2
