--- a/nginx/cert/openssl/makeCert.conf
+++ b/nginx/cert/openssl/makeCert.conf
@@ -50,14 +50,16 @@ DNS.30 = kizuna.music
 DNS.31 = *.kizuna.music
 DNS.32 = localhost
 DNS.33 = *.localhost
+DNS.34 = local.host
+DNS.35 = *.local.host
 
-IP.1   = 175.120.229.31
-IP.2   = 49.165.136.97
-IP.3   = 49.169.189.244
-IP.4   = 124.58.110.110
-IP.5   = 124.58.110.120
-IP.6   = 124.58.110.100
-IP.7   = 124.58.110.1
+IP.1   = 49.165.136.97
+IP.2   = 49.169.189.244
+IP.3   = 175.120.229.31
+IP.4   = 124.58.110.1
+IP.5   = 124.58.110.100
+IP.6   = 124.58.110.110
+IP.7   = 124.58.110.120
 IP.8   = 127.0.0.1
 
 [ req_distinguished_name ]
