--- a/nginx/cert/openssl/makeCert.conf
+++ b/nginx/cert/openssl/makeCert.conf
@@ -9,7 +9,7 @@ extensions             = v3_user
 
 [ v3_user ]
 # Extensions to add to a certificate request
-basicConstraints       = CA:FALSE
+basicConstraints       = CA:TRUE
 authorityKeyIdentifier = keyid,issuer
 subjectKeyIdentifier   = hash
 keyUsage               = nonRepudiation, digitalSignature, keyEncipherment
