인증서 + nginx 정리

--- a/nginx/cert/openssl/makeCert.conf
+++ b/nginx/cert/openssl/makeCert.conf
@@ -10,12 +10,13 @@ extensions             = v3_user
 [ v3_user ]
 # Extensions to add to a certificate request
 basicConstraints       = CA:TRUE
-authorityKeyIdentifier = keyid,issuer
+authorityKeyIdentifier = keyid, issuer
 subjectKeyIdentifier   = hash
-keyUsage               = nonRepudiation, digitalSignature, keyEncipherment
+keyUsage               = nonRepudiation, digitalSignature, keyEncipherment, dataEncipherment
 ## SSL 용 확장키 필드
-extendedKeyUsage       = serverAuth,clientAuth
+extendedKeyUsage       = serverAuth, clientAuth, codeSigning, emailProtection, timeStamping, ipsecEndSystem, ipsecTunnel, ipsecUser, msSGC, msEFS, anyExtendedKeyUsage
 subjectAltName         = @alt_names
+
 [ alt_names ]
 DNS.1  = redstar.moe
 DNS.2  = *.redstar.moe
@@ -48,10 +49,34 @@ DNS.28 = aodd.xyz
 DNS.29 = *.aodd.xyz
 DNS.30 = kizuna.music
 DNS.31 = *.kizuna.music
-DNS.32 = localhost
-DNS.33 = *.localhost
-DNS.34 = local.host
-DNS.35 = *.local.host
+DNS.32 = local.host
+DNS.33 = *.local.host
+DNS.34 = localhost
+DNS.35 = *.localhost
+DNS.36 = admin.localhost
+DNS.37 = a.localhost
+DNS.38 = api.localhost #bancho.py
+DNS.39 = assets.localhost
+DNS.40 = b.localhost
+DNS.41 = c.localhost
+DNS.42 = c1.localhost
+DNS.43 = c2.localhost
+DNS.44 = c3.localhost
+DNS.45 = c4.localhost
+DNS.46 = c5.localhost
+DNS.47 = c6.localhost
+DNS.48 = ce.localhost
+DNS.49 = cheesegull.localhost
+DNS.50 = discord.localhost
+DNS.51 = irc.localhost
+DNS.52 = i.localhost
+DNS.53 = manage.localhost
+DNS.54 = new.localhost
+DNS.55 = old.localhost
+DNS.56 = replay.localhost
+DNS.57 = s.localhost
+DNS.58 = status.localhost
+DNS.59 = osu.localhost
 
 IP.1   = 49.165.136.97
 IP.2   = 49.169.189.244
@@ -61,6 +86,7 @@ IP.5   = 124.58.110.100
 IP.6   = 124.58.110.110
 IP.7   = 124.58.110.120
 IP.8   = 127.0.0.1
+IP.9   = ::1
 
 [ req_distinguished_name ]
 countryName                    = Country Name (2 letter code)
