--- a/nginx/osu/nginx.conf
+++ b/nginx/osu/nginx.conf
@@ -69,23 +69,23 @@ server {
 
     #ingame change avatar
     location /home/account/edit {
-        return 301 https://redstar.moe/settings/avatar;
+        return 308 https://redstar.moe/settings/avatar;
     }
 
     #redirect
     location ~ ^/beatmaps/(-?\d+)$ {
         set $original_url $1;
-        return 301 https://redstar.moe/b/$original_url;
+        return 308 https://redstar.moe/b/$original_url;
     }
     location ~ ^/b/(-?\d+)$ {
         set $original_url $1;
-        return 301 https://new.redstar.moe/b/$original_url;
+        return 308 https://new.redstar.moe/b/$original_url;
     }
     location /leaderboard {
-        return 301 https://new.redstar.moe$request_uri;
+        return 308 https://new.redstar.moe$request_uri;
     }
     location /pwreset {
-        return 301 https://admin.redstar.moe/frontend/pwreset;
+        return 308 https://admin.redstar.moe/frontend/pwreset;
     }
     location /cert.crt {
         alias './cert/openssl/cert.crt';
@@ -239,7 +239,7 @@ server {
         proxy_pass http://lets;
     }
 
-    location / {
+    location ~ ^/($|b($|/.*)|leaderboard($|/.*)|login($|/.*)|logout($|/.*)|static($|/.*)) {
         proxy_set_header X-Real-IP $real_IP;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
@@ -249,8 +249,12 @@ server {
     }
 
     #redirect
-    location /u {
-        return 301 https://redstar.moe$request_uri;
+    location ~ ^/beatmaps/(-?\d+)$ {
+        set $original_url $1;
+        return 308 https://new.redstar.moe/b/$original_url;
+    }
+    location / {
+        return 308 https://redstar.moe$request_uri;
     }
 }
 
@@ -335,7 +339,7 @@ server {
     ssl_certificate_key './cert/cert.key';
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers on;
-    return 301 https://redstar.moe/irc;
+    return 308 https://redstar.moe/irc;
 }
 
 #admin.redstar.moe (Web)
@@ -370,7 +374,7 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
-        return 301 https://$host/phpmyadmin$request_uri;
+        return 308 https://$host/phpmyadmin$request_uri;
     }
 
     location /phpmyadmin {
