--- a/api/api.conf
+++ b/api/api.conf
@@ -3,7 +3,7 @@ DatabaseType=mysql
 ; The Data Source Name for the database. More: https://github.com/go-sql-driver/mysql#dsn-data-source-name
 DSN=root:@(127.0.0.1:3306)/redstar;/autoReconnect (?)
 ; The IP/Port combination from which to take connections, e.g. :8080
-ListenTo=:40001
+ListenTo=127.0.0.1:40001
 ; Bool indicating whether ListenTo is a UNIX socket or an address.
 Unix=false
 ; thing for sentry whatever
