--- a/Frontend/hanayo.conf
+++ b/Frontend/hanayo.conf
@@ -1,5 +1,5 @@
 ; ip:port from which to take requests.
-ListenTo=:6060
+ListenTo=127.0.0.1:6060
 ; Whether ListenTo is an unix socket.
 Unix=false
 ; MySQL server DSN
